<resources>
    <string name="app_name">ChatApp</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Sign up</string>
    <string name="facebook_login">Log in with Facebook</string>
    <string name="google_login">Log in with google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_out">Sign out</string>
    <string name="hint_search">Search...</string>
    <string name="add">Add</string>
    <string name="new_message">New</string>
    <string name="action_upload_photo">My profile</string>
    <string name="action_manage_users">Manage users</string>
    <string name="facebook_app_id">226706371176212</string>
    <string name="google_maps_key">AIzaSyDgD-d8dj8_FD0TaIxQkKOXxG84pUuXq_A</string>
    <string name="action_delete_conversation">Delete</string>
    <string name="action_save">Save</string>


</resources>